# vscode-librdkafka

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
examples/: CMakeLists.txt  kafkatest_verifiable_client.cpp  producer.cpp  rdkafka_complex_consumer_example.cpp  rdkafka_consume_batch.cpp  rdkafka_example.cpp
src/: CMakeLists.txt  my_producer.cpp
